{
    "name": "InputControls",
    "maps": [
        {
            "name": "FPSControls",
            "id": "a84cca7a-48f3-43b0-81e0-35c574f1a74b",
            "actions": [
                {
                    "name": "HorizontalMovement",
                    "type": "PassThrough",
                    "id": "06f75c0a-8592-4163-8ce1-16e7f6cf729e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "943d7259-daf8-42b9-aee9-5d7781466b2a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "0eb0f16a-6b5c-466b-8b42-e427383f9e13",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LookX",
                    "type": "PassThrough",
                    "id": "c7ab3ea8-6d62-4840-a8f8-ae54d274ee24",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LookY",
                    "type": "PassThrough",
                    "id": "7ceea07b-6951-422b-88f5-07697a90659e",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "397711d5-1999-432d-86ab-bcaf8ca12055",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "9cffe2e3-be63-4ed0-843d-9f910ed5407c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "aa5a92fc-07e8-4936-be71-5851e4f66ae4",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "92001401-74dc-45bb-9bdb-bc809b1c51eb",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "4c7fbb5a-94ba-4f4b-b9ab-94728279f488",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrow Keys",
                    "id": "ad957a4a-4273-491f-8b8f-d94eba3b4cd7",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "775ba5cb-8f9f-4577-8e6b-a88a1a1e3047",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "fb7a1309-ca73-40a7-b52f-cedcdb16de89",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "49d83c85-b489-4de3-8289-929a2e01355d",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "9adc9773-14b5-4d10-9e81-366badacb1cd",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f780ea01-2b6e-429f-a492-270f27cc648c",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5e2d42d9-42a2-4680-9b51-ef5a83c88d27",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7a834506-86cf-489a-964e-302ef522abb2",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e7596521-09f4-4e96-86db-8b8a89b1fedd",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookY",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "AgentControls",
            "id": "0043854d-3f8d-4363-9378-347122c9e7a6",
            "actions": [
                {
                    "name": "SwapSkins",
                    "type": "Button",
                    "id": "57a6f702-117d-4f23-9d05-0dd382ecd1de",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ToggleHandIK",
                    "type": "Button",
                    "id": "c306be2d-00a8-4a07-8d9b-5668a40ba31e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ToggleLean",
                    "type": "Button",
                    "id": "e1fd6a66-e59c-456f-a3c2-16cf75849c9c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ToggleHeadLookAt",
                    "type": "Button",
                    "id": "64fdc6b6-373a-478d-bcbe-0ad916ad7301",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ToggleEyeLookAt",
                    "type": "Button",
                    "id": "1713e97e-2b15-497a-9e08-0cdaf0852b95",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e9c8e85f-343d-45d7-bbdc-0c8185b3e0da",
                    "path": "<Keyboard>/backquote",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwapSkins",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aef0e09f-b052-42e5-9211-9fb200225966",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleHandIK",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dee04299-f3ad-46a4-a2ee-64fc030d3e12",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleLean",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7d97e956-9f04-47a3-9a7d-912aecc2c63f",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleHeadLookAt",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cab1a63e-208c-4dcc-bfb6-fa85f611e6f8",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleEyeLookAt",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "TestingActions",
            "id": "1f418907-a742-4f78-8b0e-584d623ccf21",
            "actions": [
                {
                    "name": "TestAction1",
                    "type": "Button",
                    "id": "9c669ee9-30c8-4e35-8cbb-d38038e01c5b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TestAction2",
                    "type": "Button",
                    "id": "5e45974a-57cf-4e95-a506-bcd6402272c5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TestAction3",
                    "type": "Button",
                    "id": "668d913d-b4c0-442d-a0a0-2b6f6ea25a76",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TestAction4",
                    "type": "Button",
                    "id": "af28cfbb-23f7-4b85-9819-dd0b4dee5192",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TestAction5",
                    "type": "Button",
                    "id": "2d528f34-310b-4bc6-b81e-8e8e611048f4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TestAction6",
                    "type": "Button",
                    "id": "d844d8f3-26de-4896-854a-9c881fe50181",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TestAction7",
                    "type": "Button",
                    "id": "b4d6de21-f6aa-48d9-bbbd-715792707249",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TestAction8",
                    "type": "Button",
                    "id": "be3f522c-7ebd-4120-a3fd-4e37d9ea469a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TestAction9",
                    "type": "Button",
                    "id": "98fc5e18-a069-45f2-b75f-5b4fa37c57c3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TestAction0",
                    "type": "Button",
                    "id": "f785faec-7d3b-4530-8901-77cdf480d725",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1a8d55ab-0b65-4e62-a4fd-c8273e996493",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TestAction1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b8050c12-4b37-4905-97a9-d37a264323fa",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TestAction2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "66d39e2b-5013-49e0-ad5a-5a7dd44524bb",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TestAction3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ceae8f1c-ecad-4238-96da-1769449b92ec",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TestAction4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f28f9da9-b580-4234-a4a0-279ed1633a21",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TestAction5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9bae4545-8735-481c-9dbe-3821455c070c",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TestAction6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "155db55c-0669-49ff-bfe5-7011ba6f4a95",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TestAction7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ce6e4749-a37e-4309-a2cb-9b5086617536",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TestAction8",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2300407a-3371-43ea-9197-f20d687228d8",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TestAction9",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5e1ffd55-66ff-4bca-8e69-4a4ddc8685a9",
                    "path": "<Keyboard>/0",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TestAction0",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ExperimenterControls",
            "id": "6001ffde-2977-4be9-8055-cd98d4dfb2f2",
            "actions": [
                {
                    "name": "ToggleFPS",
                    "type": "Button",
                    "id": "bd1b9888-8e98-4881-b6b8-ed9170019b03",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9a4d9013-d8f7-4de9-b81c-9766f57222f2",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleFPS",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9811008d-196c-4fb7-b81a-7ed97dd8bff9",
                    "path": "<Keyboard>/equals",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleFPS",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}